hamburger menu spacing fix

--- a/scss/parts/_navigation2.scss
+++ b/scss/parts/_navigation2.scss
@@ -44,7 +44,7 @@
     padding: 0 8vw;
   }
 
-  .hamburger-menu {
+  .dashboard-hamburger-menu {
     top: 60px;
 
     a { 
